# rs232test

./: README.md
app/: build.gradle
app/debug/: app.aab  output.json  rs232_debug-1-1.0-2019-09-06.apk
app/src/androidTest/java/com/example/jason/rs232_server/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jason/rs232_server/: MainActivity.java  SerialPort.java  msgcallback.java
app/src/main/jni/: Android.mk  CMakeLists.txt  SerialPort.c  SerialPort.h  termios.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/jason/rs232_server/: ExampleUnitTest.java
